JI-2157 Fix focus effect overflowing image input
Remove icon component when it is empty on review

--- a/src/components/generic/form/ImagePreview.scss
+++ b/src/components/generic/form/ImagePreview.scss
@@ -3,7 +3,6 @@
   .h5p-hub-image-preview {
     width: 4em;
     height: 3em;
-    margin-right: 0.5em;
     display: inline-block;
     background-position: center;
     background-size: contain;
