--- a/src/components/generic/form/ImageUpload.scss
+++ b/src/components/generic/form/ImageUpload.scss
@@ -5,12 +5,15 @@
     height: 3em;
     margin-right: 1em;
     position: relative;
+    display: flex;
 
     .h5p-hub-icon-close {
       cursor: pointer;
       font-size: 1em;
       border: none;
       outline: none;
+      position: absolute;
+      right: 0;
 
       &::before {
         font-size: 0.6em;
