--- a/src/components/steps/Review.scss
+++ b/src/components/steps/Review.scss
@@ -37,6 +37,7 @@
       }
       .h5p-hub-image-preview {
         font-size: 0.75em;
+        margin-right: 0.5em;
       }
     }
   }
